# ANN-from-scratch-SYCL

./: .gitignore  1DMatrixLib.h  ANN-from-scratch-SYCL2.advixeproj  ANN-from-scratch-SYCL2.cpp  ANN-from-scratch-SYCL2.sln  ANN-from-scratch-SYCL2.vcxproj  ANN-from-scratch-SYCL2.vcxproj.filters  BenchmarkComparison.h  CMakeLists.txt  CNN.hpp  ConvLayer.hpp  DPCPP-Project1.cpp  ImageNew.cpp  ImageNew.h  MNIST_experiment.cpp  MatrixLib.h  MatrixLib_old.h  MaxPool2x2.hpp  NeuralNetwork.h  NeuralNetwork1DMat.h  NeuralNetworkNew.h  NeuralNetworkNew_CPU.h  README.md  SYCLMatrixLib.h  SYCLMatrixLib_CPU.h  SanskritExp.cpp  Source.cpp  TestSycl.cpp  annotations.advidb2  build.bat  convert_cifar10_to_npy.py  example_cpu_gpu_comparison.cpp  gpu_kernels.h  im2col.hpp  testing_nn_2hidlayers.cpp
advisor_project/: LAPTOP-0BDGDTCK  advisor_project.advixeproj  project_read_only.infoadvixe
advisor_project/e000/: callstacks.def  e000.advixeexp  loop_hashes.def
advisor_project/e000/hs000/: hs000.advixe  metrics.advisum  threading.advisum  vectorization.advisum
advisor_project/e000/trc000/: trc000.advixe
e000/: callstacks.def  e000.advixeexp  loop_hashes.def
e000/hs001/: annotations.advias2  hs001.advixe  metrics.advisum  threading.advisum  vectorization.advisum
e000/hs001/config/: collection.cfg  context_values.cfg  runss.options
e000/hs001/data.0/: 13332-6860.0-14972.0.th  13332-6860.0-20228.0.th  (+7 more)
e000/pp000/: advixe-runpp.txt  custom_config.toml  pp000.advixe
e000/report/: advisor-report.html
e000/source_cache/: temporary_files.index
e000/trc000/: trc000.advixe
(+40 files in other folders)
